# openfe_skunkworks

./: .gitignore  AUTHORS  README.md  pyproject.toml
.github/workflows/: ci.yaml
devscripts/: ahfe_demo.ipynb  benzene.json
devtools/conda-envs/: dev.yaml
src/openfe_skunkworks/protocols/openmm_afe/: base.py  equil_afe_settings.py
src/openfe_skunkworks/protocols/openmm_utils/: omm_settings.py
tests/protocols/: test_openmm_afe_solvation_protocol.py
