[build-system]
requires=[
    'setuptools>=61.0',
    'versioningit',
]
build-backend = "setuptools.build_meta"

[project]
name = "openfe_skunkworks"
dynamic = ["version"]
authors=[
]
dependencies = [
]
description="Experimental work from the OpenFE project"
readme="README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "coverage",
]

[project.urls]
"Homepage" = "https://github.com/OpenFreeEnergy/openfe_skunkworks"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/openfe_skunkworks/_version.py"
